--- a/src/styles/home/popular/MostPopular.module.css
+++ b/src/styles/home/popular/MostPopular.module.css
@@ -9,7 +9,7 @@
 .cardsContainer {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 1rem;
 }
 
